--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t testme -f Dockerfile.dev .  
 
   script:
-    - docker run testme npm run test -- --coverege
+    - docker run testme npm run test -- --coverage
